tests/ui/associated-consts/associated-const-private-impl.stderr
error[E0624]: associated constant `ID` is private
  --> $DIR/associated-const-private-impl.rs:13:30
   |
LL |             const ID: i32 = 1;
   |             ------------- private associated constant defined here
...
LL |     assert_eq!(1, bar1::Foo::ID);
   |                              ^^ private associated constant

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0624`.
